[project]
name = "grdb"
version = "0.8.0"
description = "README.md"
authors = [
    { name = "Bjørn Mølvig", email = "bjoernmoelvig@gmail.com" },
    { name = "Mads Ehrhorn", email = "mads.ehrhorn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"

dependencies = [
    "sqlmodel>=0.0.24",
    "pydantic>=2.11.3"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
    "pytest>=7.0.1",
    "ty>=0.0.1a21",
    "bumpver>=2024.1130",
    "pytest-cov>=6.1.1",
    "glaze-cicd-utils @ git+ssh://git@github.com/GlazeTech/CICD-utils.git"
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["build", "api.egg-info"]
# from https://careers.wolt.com/en/blog/tech/professional-grade-mypy-configuration & https://docs.pydantic.dev/latest/integrations/mypy/
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
no_implicit_optional = true
disallow_untyped_defs = true
show_error_codes = true

[tool.ruff]
target-version = "py310"
lint.select = ["ALL"]
lint.ignore = [
    "D100",   # allow undocumented public modules
    "D101",   # allow undocumented public class
    "D102",   # allow undocumented public method
    "D103",   # allow undocumented public function
    "D104",   # allow undocumented public package
    "D106",   # allow undocumented public nested class
    "D107",   # allow undocumented public __init__
    "D203",   # allow 0 black lines before class docstring
    "D213",   # allow multiline docstring to start on first line
    "COM812", # allow missing trailing comma in type annotation
    "FA100",  # allow __future__-rewritable statements (if rewritten, they mess with FastAPI)
    "G004",   # allow logging using f-string
    "E501",   # don't enforce line length
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D", # allow missing docs
    "PLR2004", # allow magic numbers
    "S101", # allow asserts
    "SLF001", # allow accessing private methods
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.bumpver]
current_version = "0.8.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "BUMP VERSION {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"grdb/__init__.py" = [
    '__version__ = "{version}"',
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
